renaming offer filter

--- a/_includes/offer/variables.html
+++ b/_includes/offer/variables.html
@@ -9,8 +9,8 @@
 <!-- offers by price -->
 {% assign offers-by-price = offers | sort: 'price' %}
 
-<!-- uk offers by price -->
-{% assign uk-offers = site.data.offers | where: 'uk', 'true' | sort: 'price' %}
+<!-- domestic offers by price -->
+{% assign domestic-offers = site.data.offers | where: 'domestic', 'true' | sort: 'price' %}
 
 <!-- Rest of the world offers by price -->
-{% assign world-offers = site.data.offers | where: 'uk', 'false' | sort: 'price' %}
+{% assign non-domestic-offers = site.data.offers | where: 'domestic', 'false' | sort: 'price' %}
