--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -22,7 +22,7 @@
   'grid/spacing',
   'grid/grid',
   'grid/layouts/bob',
-  'grid/layouts/harvey',
+  // 'grid/layouts/harvey',
 
   // navigation
   'nav/core',
@@ -33,7 +33,7 @@
   // page
   'page/footer',
   'page/banner',
-  'page/offer-promo',
+  // 'page/offer-promo',
 
   // components
   'components/logos',
