--- a/_layouts/lexus-ux.html
+++ b/_layouts/lexus-ux.html
@@ -8,7 +8,7 @@ layout: default
       <p class="text--xxl">{{page.intro}}</p>
       <div class="inline-buttons space--md">
         {% for item in page.intro-links %}
-          <a href="{{item.link | liquify}}" class="btn{% if item.main-cta %} btn--black{% else %} btn--outline btn--outline-black{% endif %}{% if item.td-modal %} js-open-td-modal{% endif %}"{% if item.open-in-tab %} target="_blank"{% endif %}>{{item.title | liquify}}</a>
+          <a id="track-lexus-intro-{{item.id}}-btn" href="{{item.link | liquify}}" class="btn{% if item.main-cta %} btn--black{% else %} btn--outline btn--outline-black{% endif %}{% if item.td-modal %} js-open-td-modal{% endif %}"{% if item.open-in-tab %} target="_blank"{% endif %}>{{item.title | liquify}}</a>
         {% endfor %}
       </div>
     </div>
@@ -21,14 +21,14 @@ layout: default
       <div class="bob{% cycle '', ' bob--swap' %}">
         <div class="bob__img">
           <div class="bg-img bg-img--3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/{{feature.id}}.jpg');">
-            <a class="bg-img__link" href="{{feature.link}}"></a>
+            <a id="track-lexus-features-{{feature.id}}-img" class="bg-img__link" href="{{feature.link}}"></a>
           </div>
         </div>
         <div class="bob__text">
           <h2 class="title title--md">{{feature.title}}</h2>
           <p>{{feature.description}}</p>
           <div class="space--sm"></div>
-          <a href="{{feature.link}}" class="btn btn--sm btn--outline btn--outline-black"{% if feature.open-in-tab %} target="_blank"{% endif %}>{{page.feature-cta}}</a>
+          <a id="track-lexus-{{feature.id}}-btn" href="{{feature.link}}" class="btn btn--sm btn--outline btn--outline-black"{% if feature.open-in-tab %} target="_blank"{% endif %}>{{page.feature-cta}}</a>
         </div>
       </div>
     {% endfor %}
