--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -3,47 +3,137 @@ layout: default
 banner:
   content: >
     <div class="container container--no-padding">
-      <div class="width--xxl">
+      <div class="width--xl">
         <h1 class="banner-title banner-title--sm">{{page.long-title}}</h1>
         <div class="space--sm"></div>
-        <a href="#entry-form" class="btn btn--white btn--lg">{{page.enter-cta}}</a>
+        <a href="#entry-form" class="btn btn--white">{{page.enter-cta}}</a>
       </div>
     </div>
 ---
 
-<div class="vpad--xl">
+<div class="bg--light">
   <div class="container">
-    <div class="width width--xl text--center">
+    <div class="space--xxl"></div>
+    <div class="width--xl">
       <p class="text--xxl">{{page.intro}}</p>
     </div>
+    <div class="space--xl"></div>
+    <div class="row row--constant-4-4-4 row--gutters-sm">
+      <div class="col">
+        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/bg.jpg');"></div>
+      </div>
+      <div class="col">
+        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/bg.jpg');"></div>
+      </div>
+      <div class="col">
+        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/bg.jpg');"></div>
+      </div>
+    </div>
+    <div class="space--xxl"></div>
   </div>
 </div>
 
-<div class="row row--sm-4-4-4 row--no-gutters">
-  <div class="col">
-    <div class="bg-img bg-img--16-9 bg-img--sm-1-1 bg-img--xxxl-4-3" style="background-image: url({{site.img}}/img.jpg);"></div>
-  </div>
-  <div class="col">
-    <div class="bg-img bg-img--16-9 bg-img--sm-1-1 bg-img--xxxl-4-3" style="background-image: url({{site.img}}/img.jpg);"></div>
-  </div>
-  <div class="col">
-    <div class="bg-img bg-img--16-9 bg-img--sm-1-1 bg-img--xxxl-4-3" style="background-image: url({{site.img}}/img.jpg);"></div>
-  </div>
-</div>
-
-<div id="entry-form" class="vpad--xxl bg--light">
+<div class="vpad--xxl">
   <div class="container">
-    <div class="width width--xl text--center bg--white">
-      <div class="space--xxl"></div>
-      <div class="space--xxl"></div>
-      <div class="space--xxl"></div>
-      <div class="space--xxl"></div>
-      <p class="text--xxl">competition selector</p>
-      <p class="text--xxl">iframe: {{page.iframe-url}}</p>
-      <div class="space--xxl"></div>
-      <div class="space--xxl"></div>
-      <div class="space--xxl"></div>
-      <div class="space--xxl"></div>
+    <div id="entry-form" class="vpad--md">
+      {% assign form = page.competition-form %}
+      <form class="form boilerform" action="{{form.post-url}}" method="POST" data-expires="{{form.expiry-date}}" novalidate>
+        <div class="form__messages">
+          {% for item in form.status-messages %}
+            <div class="message message--{{item.id}}">
+              <div class="width width--lg">
+                <h3 class="title title--md">{{item.title}}</h3>
+                {% if item.description %}<p class="text--xl text--normal">{{item.description}}</p>{% endif %}
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+
+        {% for question in form.content.questions %}
+        <div class="form__step js-form-step">
+          <div class="text--center">
+            <div class="questions__title title title--lg">{{question.question}}</div>
+            <div class="questions">
+              {% for answer in question.answers %}
+                <div class="questions__option">
+                  <div class="bg-img bg-img--3-2 bg-img--sm-16-9 bg-img--lg-1-1 bg-img--xxl-4-3" style="background-image: url('{{site.img}}/content/{{page.id}}/questions/{{question.id}}-{{answer.id}}.jpg');">
+                    <a href="#" class="bg-img__link js-option-answer" data-question="{{question.id}}" data-title="{{answer.title | downcase}}" data-value="{{answer.id}}"></a>
+                    <div class="bg-img__content">
+                      <div class="title title--xl">{{answer.title}}</div>
+                    </div>
+                  </div>
+                </div>
+                {% if forloop.first %}
+                  <div class="questions__or">
+                    <div class="title title--xxs">{{form.content.or}}</div>
+                  </div>
+                {% endif %}
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+
+        <div class="form__step js-form-step">
+          <div class="width width--md">
+            <div class="title title--xs js-result-statements">
+                {{form.content.statement.start}}
+                {% for question in form.content.questions %}
+                  {% assign element = '<span class="js-answer-#"></span>' %}
+                  {% assign element-with-id = element | replace: '#', question.id %}
+                  {% assign statement-with-element = question.statement | replace: '[[result]]', element-with-id | strip %}
+                  {% if forloop.last %}and {% endif %}{{statement-with-element}}{% unless forloop.last %}, {% else %}.{% endunless %}
+                {% endfor %}
+                {{form.content.statement.end}}
+            </div>
+            <div class="space--xs"></div>
+            <div class="text--sm text--normal">
+              <a class="link js-reset-choices" href="#">{{form.content.choose-again}}</a>
+            </div>
+            <div class="space--lg"></div>
+            <div class="form__input js-form-input">
+              <label for="name" class="c-label">{{form.content.name}}</label>
+              <input type="text" id="name" name="name" class="c-input-field" autocorrect="off" data-required>
+            </div>
+            <div class="form__input js-form-input">
+              <label for="email" class="c-label">{{form.content.email}}</label>
+              <input type="email" id="email" name="email" class="c-input-field" autocapitalize="none" autocorrect="off" data-required>
+            </div>
+            <div class="form__input js-form-input">
+              <p class="c-label">{{form.content.qualify.question}}</p>
+              <div class="radio-buttons">
+                <label for="qualify-true" class="radio-button js-radio-button">
+                  <input type="radio" id="qualify-true" name="qualify" value="Yes" data-required>{{form.content.qualify.yes}}
+                </label>
+                <label for="qualify-false" class="radio-button js-radio-button">
+                  <input type="radio" id="qualify-false" name="qualify" value="No" data-required>{{form.content.qualify.no}}
+                </label>
+              </div>
+            </div>
+            <div class="form__input js-form-input">
+              <p class="c-label">{{form.content.opt-in.question}}</p>
+              <div class="radio-buttons">
+                <label for="opt-in-true" class="radio-button js-radio-button">
+                  <input type="radio" id="opt-in-true" name="opt-in" value="Yes" class="" data-required>{{form.content.opt-in.yes}}
+                </label>
+                <label for="opt-in-false" class="radio-button js-radio-button">
+                  <input type="radio" id="opt-in-false" name="opt-in" value="No" class="" data-required>{{form.content.opt-in.no}}
+                </label>
+              </div>
+            </div>
+            <div class="js-hidden-inputs">
+              {% for question in form.content.questions %}
+              <input id="{{question.id}}" name="{{question.id}}" type="hidden">
+              {% endfor %}
+            </div>
+            <div class="space--lg"></div>
+            <button type="submit" class="c-button">{{form.content.submit}}</button>
+            <p class="text--sm text--normal">{{form.content.terms}}</p>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
+
+<div class="space--xl"></div>
