--- a/_layouts/entered.html
+++ b/_layouts/entered.html
@@ -9,12 +9,12 @@
 
     <div class="content-spacing section-spacing">
       <div class="container">
-        <div class="width width--lg vpad--xxl">
-          <h1 class="title title--xl">{{page.title}}</h1>
+        <div class="width width--md vpad--xxl">
+          <h1 class="title title--lg">{{page.title}}</h1>
           <div class="space--xxs"></div>
           <p class="text--xxl">{{page.intro}}</p>
           <div class="space--md"></div>
-          <a href="{{site.baseurl}}" class="btn btn--black">back to overview</a>
+          <a href="{{page.cta.link | liquify}}" class="btn btn--black">{{page.cta.text}}</a>
         </div>
       </div>
     </div>
