--- a/_includes/page/promo-test-drive.html
+++ b/_includes/page/promo-test-drive.html
@@ -2,9 +2,7 @@
   <div class="container">
     <div class="width width--lg text--center">
       <h2 class="title title--xl">{{site.test-drive.title}}</h2>
-      <div class="width width--md">
-        <p class="text--xxxl text--normal vpad--xxs">{{site.test-drive.description}}</p>
-        <div class="space--sm"></div>
+      <div class="width width--md space--md">
         <a id="track-btn-promo-test-drive" href="{{site.test-drive.url}}" class="btn btn--white js-open-td-modal">{{site.test-drive.cta}}</a>
       </div>
     </div>
