--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -52,14 +52,15 @@ banner:
         {% for question in form.content.questions %}
         <div class="form__step js-form-step">
           <div class="text--center">
-            <div class="questions__title title title--lg">{{question.question}}</div>
+            <div class="questions__title width width--xl">{{question.question}}</div>
             <div class="questions">
               {% for answer in question.answers %}
                 <div class="questions__option">
                   <div class="bg-img bg-img--3-2 bg-img--sm-16-9 bg-img--lg-1-1 bg-img--xxl-4-3" style="background-image: url('{{site.img}}/content/{{page.id}}/questions/{{question.id}}-{{answer.id}}.jpg');">
-                    <a href="#" class="bg-img__link js-option-answer" data-question="{{question.id}}" data-title="{{answer.title | downcase}}" data-value="{{answer.id}}"></a>
+                    <a href="#" class="bg-img__link js-option-answer" data-question="{{question.id}}" data-statement="{{answer.statement}}" data-value="{{answer.id}}"></a>
+                    <div class="bg-img__bg-overlay"></div>
                     <div class="bg-img__content">
-                      <div class="title title--xl">{{answer.title}}</div>
+                      <div class="title title--lg">{{answer.title}}</div>
                     </div>
                   </div>
                 </div>
@@ -75,13 +76,13 @@ banner:
         {% endfor %}
 
         <div class="form__step js-form-step">
-          <div class="width width--md">
-            <div class="title title--xs js-result-statements">
+          <div class="width width--lg text--center">
+            <div class="statement__title js-result-statements">
                 {{form.content.statement.start}}
                 {% for question in form.content.questions %}
                   {% assign element = '<span class="js-answer-#"></span>' %}
                   {% assign element-with-id = element | replace: '#', question.id %}
-                  {% assign statement-with-element = question.statement | replace: '[[result]]', element-with-id | strip %}
+                  {% assign statement-with-element = question.statement | replace: '[[answer]]', element-with-id | strip %}
                   {% if forloop.last %}and {% endif %}{{statement-with-element}}{% unless forloop.last %}, {% else %}.{% endunless %}
                 {% endfor %}
                 {{form.content.statement.end}}
@@ -90,7 +91,9 @@ banner:
             <div class="text--sm text--normal">
               <a class="link js-reset-choices" href="#">{{form.content.choose-again}}</a>
             </div>
-            <div class="space--lg"></div>
+          </div>
+          <div class="width width--md">
+            <div class="space--xl"></div>
             <div class="form__input js-form-input">
               <label for="name" class="c-label">{{form.content.name}}</label>
               <input type="text" id="name" name="name" class="c-input-field" autocorrect="off" data-required>
