--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -46,7 +46,7 @@
   'components/offer',
   'components/modal',
   'components/td-modal',
-  'components/form',
+  // 'components/form',
 
   // general
   'styles'
