--- a/_assets/sass/competition.scss
+++ b/_assets/sass/competition.scss
@@ -1,3 +1,15 @@
+// includes needed for these styles only
+@import
+  // core
+  'core/breakpoints',
+  'core/colours',
+  'core/z-index',
+  'core/core',
+  'core/scale',
+  'typography/families'
+;
+
+
 ////////////////////////////////////////////////////////////////////////////////
 // Boilerform
 ////////////////////////////////////////////////////////////////////////////////
@@ -8,7 +20,7 @@
   padding: 11px 15px 10px 15px;
   padding: $s-1;
   border-radius: 3px;
-  font-size: 1rem;
+  font-size: 16px;
 }
 .boilerform .c-check-field__input {
   display: block;
@@ -264,14 +276,14 @@ $errorbg: #feeaed;
     line-height: 1.15;
     letter-spacing: -.015em;
     font-weight: 400;
-    font-size: $s4;
+    font-size: $s3;
     @include bp(lg){ font-size: $s5; }
   }
   &__option {
     width: 100%;
     @include bp($lg){ width: 46.5%; }
   }
-  &__or { padding: $s-4;}
+  &__or { padding: $s0 $s-4;}
 }
 
 .statement__title {
@@ -279,7 +291,7 @@ $errorbg: #feeaed;
   line-height: 1.2;
   letter-spacing: -.015em;
   font-weight: 400;
-  font-size: $s2;
+  font-size: $s1;
   @include bp(lg){ font-size: $s3; }
 }
 
@@ -315,4 +327,8 @@ $errorbg: #feeaed;
   > .radio-button {
     margin: 3px;
   }
+}
+
+.boilerform .c-button:disabled.is-loading {
+  cursor: wait;
 }
