--- a/_layouts/lexus-ux.html
+++ b/_layouts/lexus-ux.html
@@ -27,6 +27,11 @@ layout: default
         <div class="bob__text">
           <h2 class="title title--md">{{feature.title}}</h2>
           <p>{{feature.description}}</p>
+          {% if feature.extra %}
+            <div class="space--xs">
+              <p class="text--sm text--normal">{{feature.extra}}</p>
+            </div>
+          {% endif %}
           <div class="space--sm"></div>
           <a id="track-lexus-{{feature.id}}-btn" href="{{feature.link}}" class="btn btn--sm btn--outline btn--outline-black"{% if feature.open-in-tab %} target="_blank"{% endif %}>{{feature.cta-label}}</a>
         </div>
