--- a/_layouts/offers.html
+++ b/_layouts/offers.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="vpad--xxl">
   <div class="container">
-    <p class="text--xxl width--xl">{{page.intro}}</p>
+    <p class="text--xxl width--lg">{{page.intro}}</p>
     <div class="space--xxl"></div>
     <h2 class="title title--color title--xl">{{site.offer-page.country}}</h2>
     <div class="space--lg"></div>
