--- a/_layouts/lexus-ux.html
+++ b/_layouts/lexus-ux.html
@@ -1,5 +1,12 @@
 ---
 layout: default
+banner:
+  content: >
+    <div class="container container--no-padding">
+      <div class="width--xl">
+        <h1 class="banner-title banner-title--sm">{{page.title}}</h1>
+      </div>
+    </div>
 ---
 
 <div class="vpad--xxl">
