--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -5,7 +5,7 @@ extra-css: true
 banner:
   content: >
     <div class="container container--no-padding">
-      <div class="width--xl">
+      <div class="width--lg">
         <h1 class="banner-title banner-title--sm">{{page.long-title}}</h1>
         <div class="space--sm"></div>
         <a href="#entry-form" class="btn btn--white">{{page.enter-cta}}</a>
