--- a/_assets/sass/page/_banner.scss
+++ b/_assets/sass/page/_banner.scss
@@ -12,15 +12,12 @@
   color: $white;
   background-color: $l-black;
   overflow: hidden;
-  &--overview {min-height: 600px;}
+  &--overview { min-height: 700px; }
   @include bp($lg){
     height: 90%;
     min-height: 650px;
     max-height: none;
-    &--overview {
-      height: 100%;
-      min-height: 680px;
-    }
+    &--overview { height: 100%; }
   }
   &__wrap {
     position: relative;
@@ -57,6 +54,8 @@
       bottom: auto;
     }
   }
+  // lines up bg image of first frame with the video so there is no jump when video loads
+  &--overview &__bg { background-position: top center; }
   &__bg-video {
     position: absolute;
     top: 0;
@@ -70,14 +69,24 @@
       left: 50%;
       transform: translateX(-50%);
       height: 100%;
-      // margin: auto;
+      display: none;
+      @include bp($lg){ display: block; }
     }
-    &:before {
+    &:before { // needed to replicate background-size: cover behaviour
       content: '';
       display: block;
       width: 100%;
       padding-top: 56.25%;
     }
+  }
+  &__bg-video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: $z-content-upper;
+    background-color: rgba($l-black,.3);
   }
   &__jump-down {
     position: absolute;
