--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -22,13 +22,13 @@ banner:
     <div class="space--xl"></div>
     <div class="row row--constant-4-4-4 row--gutters-sm">
       <div class="col">
-        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/bg.jpg');"></div>
+        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/01.jpg');"></div>
       </div>
       <div class="col">
-        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/bg.jpg');"></div>
+        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/02.jpg');"></div>
       </div>
       <div class="col">
-        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/bg.jpg');"></div>
+        <div class="bg-img bg-img--1-1 bg-img--lg-4-3 bg-img--xxl-3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/03.jpg');"></div>
       </div>
     </div>
     <div class="space--xxl"></div>
@@ -58,8 +58,8 @@ banner:
             <div class="questions">
               {% for answer in question.answers %}
                 <div class="questions__option">
-                  <div class="bg-img bg-img--3-2 bg-img--sm-16-9 bg-img--lg-1-1 bg-img--xxl-4-3" style="background-image: url('{{site.img}}/content/{{page.id}}/questions/{{question.id}}-{{answer.id}}.jpg');">
-                    <a href="#" class="bg-img__link js-option-answer" data-question="{{question.id}}" data-statement="{{answer.statement}}" data-value="{{answer.id}}"></a>
+                  <div class="bg-img bg-img--3-2 bg-img--sm-16-9 bg-img--lg-1-1 bg-img--xxl-4-3" style="background-image: url('{{site.img}}/content/{{page.id}}/questions/{{answer.id}}.jpg');">
+                    <a href="#" class="bg-img__link js-option-answer" data-value="{{answer.value}}"></a>
                     <div class="bg-img__bg-overlay"></div>
                     <div class="bg-img__content">
                       <div class="title title--lg">{{answer.title}}</div>
@@ -79,15 +79,12 @@ banner:
 
         <div class="form__step js-form-step">
           <div class="width width--lg text--center">
-            <div class="statement__title js-result-statements">
-                {{form.content.statement.start}}
-                {% for question in form.content.questions %}
-                  {% assign element = '<span class="js-answer-#"></span>' %}
-                  {% assign element-with-id = element | replace: '#', question.id %}
-                  {% assign statement-with-element = question.statement | replace: '[[answer]]', element-with-id | strip %}
-                  {% if forloop.last %}and {% endif %}{{statement-with-element}}{% unless forloop.last %}, {% else %}.{% endunless %}
-                {% endfor %}
-                {{form.content.statement.end}}
+            <div class="statement__title">
+              {% for item in form.content.statement %}
+                <div id="{{item.id}}" class="js-message">
+                  {{item.content}}
+                </div>
+              {% endfor %}
             </div>
             <div class="space--xs"></div>
             <div class="text--sm text--normal">
@@ -127,9 +124,7 @@ banner:
               </div>
             </div>
             <div class="js-hidden-inputs">
-              {% for question in form.content.questions %}
-              <input id="{{question.id}}" name="{{question.id}}" type="hidden">
-              {% endfor %}
+              <input id="prize" name="prize" type="hidden">
             </div>
             <div class="space--lg"></div>
             <button type="submit" class="c-button">{{form.content.submit}}</button>
