extra description for opt-in field

--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -125,6 +125,7 @@ banner:
                   <input type="radio" id="opt-in-false" name="opt-in" value="No" class="" data-required>{{form.content.opt-in.no}}
                 </label>
               </div>
+              <p class="text--sm">{{form.content.opt-in.post-description}}</p>
             </div>
             <div class="js-hidden-inputs">
               {% for question in form.content.questions %}
