--- a/_includes/components/logo-partner.html
+++ b/_includes/components/logo-partner.html
@@ -1,3 +1,3 @@
-<a id="track-partner-logo{{include.placement | prepend: '-'}}" class="logo logo--partner{% if include.small %} logo--partner-sm{% endif %}" href="{{site.client.link}}">
+<a id="track-partner-logo{{include.placement | prepend: '-'}}" class="logo logo--partner{% if include.small %} logo--partner-sm{% endif %}" href="https://ad.doubleclick.net/ddm/clk/442680270;246046274;d">
   <img src="{{site.img}}/logo/partner.svg" alt="{{site.client.name}} Logo">
 </a>
