--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,12 @@
 
     {% include modal/modal.html %}
 
+    <div class="hidden">
+      <a class="js-tracking-timestamp" href="https://ad.doubleclick.net/ddm/jump/N526202.3392134SECRETESCAPESUK/B22670912.246046274;sz=1x1;ord=[timestamp]?">
+        <img class="js-tracking-timestamp" src="https://ad.doubleclick.net/ddm/ad/N526202.3392134SECRETESCAPESUK/B22670912.246046274;sz=1x1;ord=[timestamp];dc_lat=;dc_rdid=;tag_for_child_directed_treatment=;tfua=?" border="0" width="1" height="1">
+      </a>
+    </div>
+
   </body>
 
 </html>
