--- a/_includes/page/promo-test-drive.html
+++ b/_includes/page/promo-test-drive.html
@@ -1,4 +1,4 @@
-<div class="vpad--xxxl bg--img text--white" style="background-image: url('{{site.img}}/promo-test-drive.jpg');">
+<div class="vpad--xxxl bg--img text--white bg--promo-test-drive">
   <div class="container">
     <div class="width width--lg text--center">
       <h2 class="title title--xl">{{site.test-drive.title}}</h2>
