--- a/_layouts/overview.html
+++ b/_layouts/overview.html
@@ -26,5 +26,13 @@ banner:
     <div class="width--xxl">
       {% include page/guide-nav.html %}
     </div>
+    <div class="space--xxxl"></div>
+    <div class="width--lg">
+      <h2 class="title title--color title--xl">Hotels</h2>
+      <p class="text--xxl">Discover a handpicked selection of design-forward hotels. Book a break and be in with a chance of using the All New Lexus UX for your getaway.</p>
+      <div class="space--sm"></div>
+      <a href="{{site.baseurl}}/hotels" class="btn btn--sm btn--outline btn--outline-black">See All Hotels</a>
+    </div>
+    <div class="space--md"></div>
   </div>
 </div>
