--- a/_layouts/offers.html
+++ b/_layouts/offers.html
@@ -6,8 +6,9 @@ layout: default
 
 <div class="vpad--xxl">
   <div class="container">
+    <h2 class="title title--xs">Book a break and be in with a chance of using a Lexus</h2>
     <p class="text--xxl width--xl">{{page.intro}}</p>
-    <div class="space--xxl"></div>
+    <div class="space--xxxl"></div>
     <h2 class="title title--color title--xl">{{site.offer-page.country}}</h2>
     <div class="space--lg"></div>
     <div class="row row--xl-6-6 row--gutters-lg">
