added timestamp to competition entry

--- a/_layouts/competition.html
+++ b/_layouts/competition.html
@@ -133,6 +133,7 @@ banner:
               {% endfor %}
             </div>
             <div class="space--lg"></div>
+            <input class="js-form-entry-time" id="entry-time" name="entry-time" type="hidden">
             <button type="submit" class="c-button">{{form.content.submit}}</button>
             <p class="text--sm text--normal">{{form.content.terms}}</p>
           </div>
