--- a/_layouts/offers.html
+++ b/_layouts/offers.html
@@ -8,25 +8,10 @@ layout: default
   <div class="container">
     <h2 class="title title--xs">Book a break and be in with a chance of using a Lexus</h2>
     <p class="text--xxl width--xl">{{page.intro}}</p>
-    <div class="space--xxxl"></div>
-    <h2 class="title title--color title--xl">{{site.offer-page.country}}</h2>
+    <div class="space--xl"></div>
     <div class="space--lg"></div>
     <div class="row row--xl-6-6 row--gutters-lg">
-      {% for offer in domestic-offers %}
-        <div class="col">
-          {% include offer/offer.html %}
-        </div>
-      {% endfor %}
-    </div>
-  </div>
-</div>
-
-<div class="vpad--xxl bg--light">
-  <div class="container">
-    <h2 class="title title--color title--xl">{{site.offer-page.world}}</h2>
-    <div class="space--lg"></div>
-    <div class="row row--xl-6-6 row--gutters-lg">
-      {% for offer in non-domestic-offers %}
+      {% for offer in offers %}
         <div class="col">
           {% include offer/offer.html %}
         </div>
